--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 /config/application.yml
 public/uploads
 config/database.yml
+
+# ignore coverage from simplecov
+coverage/
+coverage/*.json
+coverage/*.html
