--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 bundler_args: '--without development'
 before_script:
   - "psql -c 'create database wdt_test;' -U postgres"
-  - 'cp config/database.yml.example config/database.yml'
+  - 'cp config/database.example.yml config/database.yml'
   - 'RAILS_ENV=test bundle exec rake db:migrate >> /dev/null 2>&1'
 script:
   - 'RAILS_ENV=test bundle exec rake'
