--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ bundler_args: '--without development'
 before_script:
   - "psql -c 'create database wdt_test;' -U postgres"
   - 'cp config/database.example.yml config/database.yml'
-  - 'RAILS_ENV=test bundle exec rake db:migrate >> /dev/null 2>&1'
+  - 'RAILS_ENV=test bundle exec rake db:migrate'
 script:
   - 'RAILS_ENV=test bundle exec rake'
