Add config vars for bambooh

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ before_script:
   - "psql -c 'create database kardex_test;' -U postgres"
   - 'cp config/database.example.yml config/database.yml'
   - 'RAILS_ENV=test bundle exec rake db:migrate'
+  - "export BAMBOO_API_KEY=API_TOKEN RAILS_ENV=test"
+  - "export BAMBOO_SUBDOMAIN=crowdint RAILS_ENV=test"
 script:
   - 'RAILS_ENV=test bundle exec rake'
