--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
   - 2.1.2
 before_script:
+  - "export DISPLAY=:99.0"
+  - 'sh -e /etc/init.d/xvfb start'
   - "psql -c 'create database kardex_test;' -U postgres"
   - 'cp config/database.example.yml config/database.yml'
   - 'RAILS_ENV=test bundle exec rake db:migrate'
