Update info with correct awards

--- a/config/dataseeds/awards.yml
+++ b/config/dataseeds/awards.yml
@@ -1,19 +1,18 @@
 -
-  title: 'cerveza'
-  description: 'Lorem ipsum dolor sit amet'
+  title: '$75 tacos'
+  description: ''
 -
-  title: 'balones'
-  description: 'Para jugar fucho... obviamente XD'
+  title: '$50 internacional'
+  description: ''
 -
-  title: 'cevichazo!'
-  description: 'Panza llena... corazon contento'
+  title: '$75 internacional'
+  description: ''
 -
-  title: 'mouse'
-  description: 'Los gatos tambien necesitan ser premiados'
+  title: '$100 internacional'
+  description: ''
 -
-  title: 'camisa de crowd'
-  description: 'Te falta ropa... no te preocupes... nosotros
-    te regalamos :)'
+  title: '$75 Bocatto'
+  description: ''
 -
-  title: 'tarro chelero'
-  description: 'Cheeeeeeelaaaaaas!'
+  title: 'Cup with logo'
+  description: ''
