Adds voting functionality
* Adds personal files to .gitignore
* Adds css rules for admin area
* Change relation for badge engine badge initializer
* Change name resource in config/routes

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ coverage/.last_run.json
 # ignore personal configuration files
 .ruby-version
 .ruby-gemset
+
+# ignore personal files
+/app/assets/images/badges/*
